--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "expo": "^39.0.3",
-    "expo-cli": "^3.28.2",
+    "expo-cli": "^3.28.5",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "^0.63.3",
     "react-native-paper": "^4.3.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
