--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@material-ui/core": "^4.11.0",
     "@react-native-community/async-storage": "^1.12.1",
     "expo": "^40.0.0",
+    "expo-av": "^8.7.0",
     "expo-cli": "^4.0.17",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "^0.63.3",
     "react-native-paper": "^4.3.0",
+    "react-native-sound-player": "^0.10.5",
+    "react-native-use-sound": "^1.1.8",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "use-sound": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
