--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/async-storage": "^1.12.1",
-    "expo": "^40.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "expo": "^40.0.1",
     "expo-av": "^8.7.0",
     "expo-cli": "^4.0.17",
+    "expo-font": "^9.0.0",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.3",
+    "react-native-global-props": "^1.1.5",
     "react-native-web": "^0.14.10",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
