--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "expo": "^40.0.1",
     "expo-av": "^8.7.0",
     "expo-cli": "^4.0.17",
-    "expo-font": "^9.0.0",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.3",
     "react-native-global-props": "^1.1.5",
+    "react-native-grid-component": "^2.0.1",
+    "react-native-material-buttons": "^0.6.0",
     "react-native-web": "^0.14.10",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
