--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "^40.0.1",
+    "expo-ads-admob": "~8.4.0",
     "expo-av": "^8.7.0",
     "expo-cli": "^4.0.17",
     "expo-font": "~8.4.0",
