--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "react": "~16.11.0",
     "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-native": "^0.63.3",
+    "react-native": "^0.64.1",
     "react-native-global-props": "^1.1.5",
     "react-native-grid-component": "^2.0.1",
     "react-native-material-buttons": "^0.6.0",
-    "react-native-web": "^0.14.10",
+    "react-native-web": "^0.16.3",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "private": true
 }
