--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/async-storage": "^1.12.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "expo": "^40.0.1",
+    "event-emitter": "^0.3.5",
+    "expo": "^41.0.1",
     "expo-ads-admob": "~8.4.0",
     "expo-av": "^8.7.0",
-    "expo-cli": "^4.0.17",
-    "expo-font": "~8.4.0",
+    "expo-cli": "^3.21.1",
+    "expo-font": "^9.1.0",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-art": "^17.0.1",
@@ -25,9 +26,11 @@
     "react-native-global-props": "^1.1.5",
     "react-native-grid-component": "^2.0.1",
     "react-native-material-buttons": "^0.6.0",
+    "react-native-viewport-units": "^0.0.5",
     "react-native-web": "^0.16.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "unimodules-permissions-interface": "^6.1.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
