--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "adb": "^0.2.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "event-emitter": "^0.3.5",
-    "expo": "^42.0.3",
+    "expo": "^42.0.5",
     "expo-ads-admob": "~10.1.2",
     "expo-av": "~9.2.3",
-    "expo-cli": "^4.11.0",
+    "expo-cli": "4.13",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -35,7 +35,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "unimodules-permissions-interface": "~6.1.0",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
